# wa-sync

./: .gitignore  backup.ps1  composer.json  dev-all.ps1  ecosystem.config.js  package-lock.json  package.json  replace_admin_urls.php
bootstrap/: app.php
config/: services.php
rust/crates/central/: Cargo.toml  dev.ps1
rust/crates/central/src/: activity.rs  ai.rs  ai_pipeline.rs  auth.rs  authextra.rs  autoreply.rs  ban.rs  billing.rs  broadcast.rs  broadcast_engine.rs  contacts.rs  coupons.rs  dash.rs  datatables.rs  inbox.rs  knowledge.rs  logactivity.rs  mailer.rs  main.rs  maintenance.rs  menu.rs  midtrans.rs  notify.rs  plans.rs  profile.rs  publicapi.rs  quota.rs  ratelimit.rs  rbac.rs  roles.rs  seed.rs  sessionstore.rs  settings.rs  social.rs  subscribers.rs  users.rs  view.rs  wa.rs  wagw.rs  wainternal.rs  (+3 more)
rust/crates/central/templates/: coupons.html  dashboard.html  landing.html
rust/crates/central/templates/auth/: app.html  forgot-password.html  login.html  register.html  reset-password.html
rust/crates/central/templates/backend/my_profile/: change_pic.html  index.html
rust/crates/central/templates/errors/: 403.html  404.html  503.html
rust/crates/central/templates/layout/: _devcredit.html  admin.html  app.html  footer.html  menu.html  navbar.html  sidebar.html  wa.html
rust/crates/central/templates/wa/: api_docs.html  api_keys.html  autoreply.html  billing.html  broadcast.html  broadcast_show.html  contacts.html  inbox.html  invoice.html  knowledge.html  placeholder.html  plans.html  sessions.html  subscribers.html  webhooks.html
(+90 files in other folders)
