[package]
name = "central"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
bcrypt = "0.19.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7"
sha2 = "0.10"
subtle = "2"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tera = "1.20.1"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4", "v7", "serde"] }
woothee = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
